Fix IE10 visual issue
IE 10 and 11 have poor support for the css property flex-wrap
As a temporary fix im dessing a max width to prevent the page from
overflowing

--- a/moj-node/assets/sass/components/_episode-content-item.scss
+++ b/moj-node/assets/sass/components/_episode-content-item.scss
@@ -10,6 +10,7 @@
 .govuk-hub-episodes-content-items {
   display: flex;
   flex-wrap: wrap;
+  max-width: 880px; // Temporary fix for IE browsers
 
   .item {
     &:first-child {
